--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "rollup -c",
-    "dev": "rollup -c -w & tsc -w -p tsconfig.backend.json & nodemon dist/index.js",
+    "dev": "rollup -c -w & tsc -w -p tsconfig.backend.json & nodemon -d 1 dist/index.js",
     "start": "sirv public --no-clear",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
@@ -27,10 +27,15 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-validator": "^6.14.1",
+    "mongodb": "^4.6.0",
     "nodemon": "^2.0.16",
     "sirv-cli": "^2.0.0",
+    "svelte-forms": "^2.3.1",
     "typescript": "^4.7.2"
   }
 }
