--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "rollup -c",
-    "dev": "rollup -c -w & tsc -w -p tsconfig.backend.json & nodemon -d 1 dist/index.js",
+    "dev": "rollup -c -w & tsc -w -p tsconfig.backend.json & nodemon -d 1 dist/backend/index.js",
     "start": "sirv public --no-clear",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
