--- a/.prettierrc
+++ b/.prettierrc
@@ -8,7 +8,8 @@
         {
             "files": "*.ts",
             "options": {
-                "tabWidth": 4
+                "tabWidth": 4,
+                "arrowParens": "avoid"
             }
         }
     ]
