--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "build": "rollup -c && tsc -p tsconfig.backend.json",
-    "dev": "rollup -c -w & tsc -w -p tsconfig.backend.json & nodemon -d 1 dist/backend/index.js",
-    "start": "node dist/backend/index.js",
+    "dev": "rollup -c -w & tsc -w -p tsconfig.backend.json & nodemon -d 1 -r source-map-support/register dist/backend/index.js",
+    "start": "node -r source-map-support/register dist/backend/index.js",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
